Fix jump after loading

--- a/site/client/css/pages/chartBuilder.scss
+++ b/site/client/css/pages/chartBuilder.scss
@@ -10,6 +10,7 @@ $text-color: #7a899e;
     width: 100%;
     max-width: 1200px;
     padding-top: 5px;
+    min-height: 790px;
 
     .CovidChartBuilderSideBar {
         width: 220px;
